force-app/main/default/objects/Factsheet__c/Factsheet__c.object-meta.xml
<CustomObject>
    <label>Factsheet</label>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>Factsheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factsheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>