force-app/main/default/objects/Factsheet__c/fields/Fieldset_Name__c.field-meta.xml
<CustomField>
    <fullName>Fieldset_Name__c</fullName>
    <description>Name of the fieldset to use for the detail view of the factsheet</description>
    <inlineHelpText>Name of the fieldset to use for the detail view of the factsheet</inlineHelpText>
    <label>Fieldset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>