force-app/main/default/objects/Factsheet__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Factsheet_Objects</valueSetName>
    </valueSet>
</CustomField>