force-app/main/default/objects/Factsheet__c/fields/Show_Attachment_Section__c.field-meta.xml
<CustomField>
    <fullName>Show_Attachment_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Attachment Section</label>
    <type>Checkbox</type>
</CustomField>