force-app/main/default/objects/Factsheet__c/fields/Show_Detail_View__c.field-meta.xml
<CustomField>
    <fullName>Show_Detail_View__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Detail View</label>
    <type>Checkbox</type>
</CustomField>